# cims

./: 1_crawl_webpage.py  2_distance_calculation.py  app.py  cims_data.pkl  data.json  data_exploration.ipynb  distasnce_crawling.ipynb  pyproject.toml  requirements.txt
data/: Alt_de_Juclar.json  Alt_de_la_Capa.json  Alt_del_Griu.json  Balandrau.json  Bassegoda.json  Bastiments.json  Bellmunt.json  Besiberri_Nord.json  Besiberri_Sud.json  Bony_de_la_Pica_o_Pica_d’Os.json  Cabrera.json  Cambra_d’Ase.json  Campirme.json  Canigó.json  Cap_de_Boumort.json  Cap_de_Broate.json  Cap_de_Carreu.json  Cap_de_Gelada.json  Cap_de_Pla_Redon.json  Cap_de_la_Boixassa.json  Cap_de_la_Gallina_Pelada.json  Cap_del_Verd.json  Carlit.json  Caro.json  Casamanya_Nord.json  Castell_Saverdera.json  Castell_de_Besora.json  Castell_de_Bocs.json  Castell_de_Boixadors.json  Castell_de_Burriac.json  Castell_de_Lluçà.json  Castell_de_Llívia.json  Castell_de_Milany.json  Castell_de_Montgrí.json  Castell_de_Sant_Miquel.json  Castellsapera.json  Catinell.json  Cavall_Bernat_de_Llaberia.json  Clapí_Vell.json  Cogulló_de_Cal_Torre.json  (+481 more)
