[project]
name = "cims"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "altair>=4.0.0",
    "bs4>=0.0.2",
    "folium>=0.20.0",
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
    "polyline>=2.0.4",
    "requests>=2.32.5",
    "streamlit>=1.19.0",
    "streamlit-folium>=0.26.1",
    "tqdm>=4.67.3",
]
